<resources>
    <string name="app_name">EyePax-News-App</string>
    <string name="eyepax_news_app">EyePax News App</string>
    <string name="generatePrefPackageIdentifier">com.eyepax.news.app.general.prefs</string>
    <string name="user_name">User Name</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="new_user">New User</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="reenter_password">Re Enter Password</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="author_null">N/A</string>
    <string name="home">Home</string>
    <string name="favorite">Favorite</string>
    <string name="profile">Profile</string>
    <string name="filter">Filter</string>
    <string name="reset">Reset</string>
    <string name="sort_by">Sort By</string>
    <string name="save">Save</string>
    <string name="logout">Logout</string>
</resources>