<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bg_rounded_top_corners"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
        android:layout_width="90dp"
        android:layout_height="3dp"
        android:background="@color/light_gray"
        android:layout_marginTop="@dimen/margin_5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/headerTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textColor="@color/font_black"
        android:textSize="@dimen/header_25"
        android:layout_margin="@dimen/margin_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/resetBtn"
        android:layout_width="80dp"
        android:layout_height="35dp"
        android:text="@string/reset"
        android:textSize="@dimen/text_12"
        android:background="@drawable/bg_search_edit_text"
        android:layout_margin="@dimen/margin_20"
        android:paddingLeft="@dimen/padding_10"
        android:paddingRight="@dimen/padding_10"
        android:drawableStart="@drawable/ic_reset"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/sortListHeaderTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sort_by"
        android:textSize="@dimen/text_16"
        android:layout_marginTop="@dimen/margin_20"
        android:layout_marginStart="@dimen/margin_20"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/headerTv"/>

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chipGroup"
        app:singleSelection="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_20"
        app:layout_constraintTop_toBottomOf="@id/sortListHeaderTv">

        <com.google.android.material.chip.Chip
            android:id="@+id/chipRecommended"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Recommended" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipLatest"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Latest" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipMostViewed"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Most viewed" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipChannel"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Channel" />

        <com.google.android.material.chip.Chip
            android:id="@+id/chipFollowing"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Following" />
        <com.google.android.material.chip.Chip
            android:id="@+id/chipPopularity"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="popularity" />
        <com.google.android.material.chip.Chip
            android:id="@+id/chipPublishedAt"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="publishedAt" />
        <com.google.android.material.chip.Chip
            android:id="@+id/chipRelevance"
            style="@style/Widget.MaterialComponents.Chip.Filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="relevancy" />
    </com.google.android.material.chip.ChipGroup>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveBtn"
        android:text="@string/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cornerRadius="@dimen/radius_20"
        android:layout_margin="@dimen/radius_20"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chipGroup"/>


</androidx.constraintlayout.widget.ConstraintLayout>